## 0.0.1

### Added
- I have notice that one product can be made for mulltiples suppliers
and one supplier can have mulltiples products so i created a table to 
link them `created`

### Changed
- storage -> products
- products.Item -> products.Name
- removed supplier id from products
- WHOLE stucture now with OOP
- GUI tkinter based

### Fixed
- Debuged and revised
- Typo errors custumer -> customer

## 0.0.2

### Added 
- window icon

### Changed
- entry font default -> Helvetica, 16
- font size default -> Helvetica, 16

### Fixed 
- No duplicates products for 1 customer on sellers table
- No duplicates items in treeview
- window has minsize now